# netcdf_to_monthly_averaged_xlsx

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/netcdf_util/: divide_to_month.rs  get_variable.rs  get_variable_attribute_as_f32.rs  get_variable_unit_as_date.rs  load_netcdf_file.rs  mod.rs  split_to_worker_count.rs
src/sheet_writer/: mod.rs
src/types/: mod.rs
src/worker/: mod.rs
