[package]
name = "rust_netcdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcdf = { version = "0.6.1", features = ["static", "memory"]}
xlsxwriter = "0.3.5"
chrono = "0.4.19"
clap = "3.0.5"
num_cpus = "1.13.1"
